--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 docker
 sarge
 python-box
-botleague-helpers
+botleague_helpers
 google-cloud-storage>=1.15.0
 google-auth>=1.6.3
 google-cloud-logging
