--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -7,3 +7,5 @@ services:
     - ~/.gcpcreds/:/root/.gcpcreds
     environment:
       GOOGLE_APPLICATION_CREDENTIALS: /root/.gcpcreds/silken-impulse-217423-8fbe5bbb2a10.json
+      LOGURU_LEVEL: INFO
+      INSTANCE_ID: notaninstanceid
