--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   worker:
     build: .
+    restart: always
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
     - ~/.gcpcreds/:/root/.gcpcreds
