Vendor botleague-helpers to update with auto_git

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 docker
 sarge
 python-box
-botleague-helpers>=0.0.6
 google-cloud-storage>=1.15.0
 google-auth>=1.6.3
 google-cloud-logging
@@ -9,4 +8,9 @@ loguru
 pytest
 GitPython>=2.1.11
 ipython
+
+# Vendor this into git to avoid a docker pull when we change it.
+# I.e. update botleague-helpers via auto_updater.py
+-e git://github.com/botleague/botleague-helpers.git#egg=botleague-helpers==0.1.0
+
 
