Retry results request on exception

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ ipython
 requests
 slackclient
 better_exceptions
+retry
 git+git://github.com/botleague/botleague-helpers#egg=botleague-helpers
 git+git://github.com/deepdrive/problem-constants#egg=problem-constants
 
